- fixed SF# 3274222: AtomicCounter's postfix operators aren't atomic on Windows
- fixed SF# 3317177: Handle leak on windows
- fixed SF# 3181882: Poco::URI::getPathEtc() double-encodes query
- fixed SF# 3379935: ThreadPool Start Bug
- fixed SF# 3354451: Poco::Format::parsePrec never sets the precision to zero
- fixed SF# 3387258: _MAX_PATH used but unknown in Path_WIN32


Release 1.4.1p1 (2011-02-08)
============================

- Poco::Mutex is now a recursive mutex again on Linux
  (this was caused by an unfortunate feature test for
  PTHREAD_MUTEX_RECURSIVE which did not work on Linux
  as PTHREAD_MUTEX_RECURSIVE is an enum value and not
  a macro)
- Poco::Net::SecureSocketImpl::abort() now only shuts
  down the underlying socket connection and does not free
  the SSL object, due to multithreading issues.


Release 1.4.1 (2011-01-29)
==========================

- fixed SF# 3150223: Poco::BinaryReader cannot read std::vector correctly
- fixed SF# 3146326: SharedMemory issue
- made Poco::Net::HTTPSession::abort() virtual
- added Poco::Net::SecureStreamSocket::abort() to immediately close
  a SSL/TLS connection without performing an orderly SSL/TLS shutdown.
- fixed SF# 3148126: HTTPSClientSession destructor (!) throws an IOException.
  Added try/catch block to Poco::Net::SecureSocketImpl destructor.
- added additional constructor to Poco::Net::HTTPSClientSession, taking
  both a socket and a session object.
- Poco::Net::HTTPSession::abort() now also can be used with a
  Poco::Net::HTTPSClientSession.
- fixed SF# 3148045: make clean and distclean issues
- changed Data library names on Unix/Linux platforms to
  match the names on Windows (PocoSQLite -> PocoDataSQLite,
  PocoMySQL -> PocoDataMySQL, PocoODBC -> PocoDataODBC)
- added additional options to configure script
- added additional documentation to Poco::Net::HTTPClientSession
- Poco::Net::HTTPClientSession::receiveResponse() closes the connection 