@@ -1,7 +1,7 @@
 //
 // Path.cpp
 //
-// $Id: //poco/1.4/Foundation/src/Path.cpp#2 $
+// $Id: //poco/1.4/Foundation/src/Path.cpp#3 $
 //
 // Library: Foundation
 // Package: Filesystem
@@ -16,14 +16,14 @@
 // execute, and transmit the Software, and to prepare derivative works of the
 // Software, and to permit third-parties to whom the Software is furnished to
 // do so, all subject to the following:
-//
+// 
 // The copyright notices in the Software and this entire statement, including
 // the above license grant, this restriction and the following disclaimer,
 // must be included in all copies of the Software, in whole or in part, and
 // all derivative works of the Software, unless such copies or derivative
 // works are solely in the form of machine-executable object code generated by
 // a source language processor.
-//
+// 
 // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 // FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT. IN NO EVENT
@@ -99,51 +99,51 @@ Path::Path(const char* path, Style style)
 }
 
 
-Path::Path(const Path& path):
-	_node(path._node),
+Path::Path(const Path& path): 
+	_node(path._node), 
 	_device(path._device),
 	_name(path._name),
 	_version(path._version),
 	_dirs(path._dirs),
 	_absolute(path._absolute)
-{
+{	
 }
 
 
 Path::Path(const Path& parent, const std::string& fileName):
-	_node(parent._node),
+	_node(parent._node), 
 	_device(parent._device),
 	_name(parent._name),
 	_version(parent._version),
 	_dirs(parent._dirs),
 	_absolute(parent._absolute)
-{
+{	
 	makeDirectory();
 	_name = fileName;
 }
 
 
 Path::Path(const Path& parent, const char* fileName):
-	_node(parent._node),
+	_node(parent._node), 
 	_device(parent._device),
 	_name(parent._name),
 	_version(parent._version),
 	_dirs(parent._dirs),
 	_absolute(parent._absolute)
-{
+{	
 	makeDirectory();
 	_name = fileName;
 }
 
 
 Path::Path(const Path& parent, const Path& relative):
-	_node(parent._node),
+	_node(parent._node), 
 	_device(parent._device),
 	_name(parent._name),
 	_version(parent._version),
 	_dirs(parent._dirs),
 	_absolute(parent._absolute)
-{
+{	
 	resolve(relative);
 }
 
@@ -152,13 +152,13 @@ Path::~Path()
 {
 }
 
-
+	
 Path& Path::operator = (const Path& path)
 {
 	return assign(path);
 }
 
-
+	
 Path& Path::operator = (const std::string& path)
 {
 	return assign(path);
@@ -210,7 +210,7 @@ Path& Path::assign(const std::string& path)
 	return *this;
 }
 
-
+	
 Path& Path::assign(const std::string& path, Style style)
 {
 	switch (style)
@@ -254,7 +254,7 @@ std::string Path::toString() const
 #endif
 }
 
-
+	
 std::string Path::toString(Style style) const
 {
 	switch (style)
@@ -460,36 +460,36 @@ void Path::setNode(const std::string& node)
 	_absolute = _absolute || !node.empty();
 }
 
-
+	
 void Path::setDevice(const std::string& device)
 {
 	_device   = device;
 	_absolute = _absolute || !device.empty();
 }
 
-
+	
 const std::string& Path::directory(int n) const
 {
 	poco_assert (0 <= n && n <= _dirs.size());
-
+	
 	if (n < _dirs.size())
 		return _dirs[n];
 	else
-		return _name;
+		return _name;	
 }
 
 
 const std::string& Path::operator [] (int n) const
 {
 	poco_assert (0 <= n && n <= _dirs.size());
-
+	
 	if (n < _dirs.size())
 		return _dirs[n];
 	else
-		return _name;
+		return _name;	
 }
 
-
+	
 void Path::pushDirectory(const std::string& dir)
 {
 	if (!dir.empty() && dir != ".")
@@ -516,27 +516,27 @@ void Path::pushDirectory(const std::string& dir)
 	}
 }
 
-
+	
 void Path::popDirectory()
 {
 	poco_assert (!_dirs.empty());
-
+	
 	_dirs.pop_back();
 }
 
 
 void Path::popFrontDirectory()
 {
-        poco_assert (!_dirs.empty());
-        
-        StringVec::iterator it = _dirs.begin();
-        _dirs.erase(it);
+	poco_assert (!_dirs.empty());
+	
+	StringVec::iterator it = _dirs.begin();
+	_dirs.erase(it);
 }
 
-        
+	
 void Path::setFileName(const std::string& name)
 {
-        _name = name;
+	_name = name;
 }
 
 
@@ -572,7 +572,7 @@ void Path::setExtension(const std::string& extension)
 	}
 }
 
-
+			
 std::string Path::getExtension() const
 {
 	std::string::size_type pos = _name.rfind('.');
@@ -599,13 +599,13 @@ std::string Path::current()
 	return PathImpl::currentImpl();
 }
 
-
+	
 std::string Path::home()
 {
 	return PathImpl::homeImpl();
 }
 
-
+	
 std::string Path::temp()
 {
 	return PathImpl::tempImpl();
@@ -617,7 +617,7 @@ std::string Path::null()
 	return PathImpl::nullImpl();
 }
 
-
+	
 std::string Path::expand(const std::string& path)
 {
 	return PathImpl::expandImpl(path);
@@ -665,7 +665,7 @@ void Path::parseUnix(const std::string& path)
 
 	if (it != end)
 	{
-		if (*it == '/')
+		if (*it == '/') 
 		{
 			_absolute = true; ++it;
 		}
@@ -687,16 +687,18 @@ void Path::parseUnix(const std::string& path)
 			while (it != end && *it != '/') name += *it++;
 			if (it != end)
 			{
-                                if (_dirs.empty())
-                                {
-                                        if (!name.empty() && *(name.rbegin()) == ':')
-                                        {
-                                                _device.assign(name, 0, name.length() - 1);
-                                                _absolute = true;
-                                        }
-                                        else
-                                                pushDirectory(name);
-                                }
+				if (_dirs.empty())
+				{
+					if (!name.empty() && *(name.rbegin()) == ':')
+					{
+						_absolute = true;
+						_device.assign(name, 0, name.length() - 1);
+					}
+					else
+					{
+						pushDirectory(name);
+					}
+				}
 				else pushDirectory(name);
 			}
 			else _name = name;
@@ -724,17 +726,17 @@ void Path::parseWindows(const std::string& path)
 		}
 		else if (it != end)
 		{
-                        char d = *it++;
-                        if (it != end && *it == ':') // drive letter
-                        {
-                                if (_absolute || !((d >= 'a' && d <= 'z') || (d >= 'A' && d <= 'Z'))) throw PathSyntaxException(path);
-                                _absolute = true;
-                                _device += d;
-                                ++it;
-                                if (it == end || (*it != '\\' && *it != '/')) throw PathSyntaxException(path);
-                                ++it;
-                        }
-                        else --it;
+			char d = *it++;
+			if (it != end && *it == ':') // drive letter
+			{
+				if (_absolute || !((d >= 'a' && d <= 'z') || (d >= 'A' && d <= 'Z'))) throw PathSyntaxException(path);
+				_absolute = true;
+				_device += d;
+				++it;
+				if (it == end || (*it != '\\' && *it != '/')) throw PathSyntaxException(path);
+				++it;
+			}
+			else --it;
 		}
 		while (it != end)
 		{
@@ -793,7 +795,7 @@ void Path::parseVMS(const std::string& path)
 						}
 					}
 				}
-			}
+			}			
 			if (name.empty())
 			{
 				if (it != end && *it == '[')
@@ -819,7 +821,7 @@ void Path::parseVMS(const std::string& path)
 								{
 									if (_dirs.empty() || _dirs.back() == "..")
 										_dirs.push_back("..");
-									else
+									else 
 										_dirs.pop_back();
 								}
 								else _dirs.push_back(name);
@@ -890,7 +892,7 @@ void Path::parseGuess(const std::string& path)
 			case '\\': hasBackslash = true; break;
 			case '/':  hasSlash = true; break;
 			case '[':  hasOpenBracket = true;
-			case ']':  hasClosBracket = hasOpenBracket;
+			case ']':  hasClosBracket = hasOpenBracket; 
 			case ';':  semiIt = it; break;
 			}
 		}
